--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "academind-api",
   "version": "1.0.0",
   "description": "First nodejs api",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [
     "node",
